# galaskyMotor

./: CMakeLists.txt
assets/menu/: menu.xml
include/: APlayer.hh  Button.hpp  Event.hpp  Game.hpp  IEntity.hh  ILayout.hh  MenuLayout.hh  MenuNav.hh  MenuSelect.hpp  Player.hh  Screen.hh  SoundManager.hpp  Sprite.hh  SpriteManager.hpp  Window.hpp
src/: APlayer.cpp  Event.cpp  Game.cpp  MenuLayout.cpp  Player.cpp  Screen.cpp  SoundManager.cpp  Sprite.cpp  SpriteManager.cpp  Window.cpp  main.cpp
